Fix JWT auth, CORS and register/login access